--- a/Contact/app/build.gradle
+++ b/Contact/app/build.gradle
@@ -5,11 +5,11 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "ru.mospolytech.room"
-        minSdkVersion 21
+        applicationId "com.example.contacts"
+        minSdkVersion 16
         targetSdkVersion 29
-        versionCode 2
-        versionName "0.1"
+        versionCode 1
+        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -28,12 +28,11 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.13'
+    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.room:room-runtime:2.2.5'
     testImplementation 'androidx.room:room-testing:2.2.5'
     annotationProcessor 'androidx.room:room-compiler:2.2.5'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
